# rust_client_server

./: Cargo.toml  README.md
rust_client_server/src/: client.rs  main.rs  server.rs
src/: client.rs  main.rs
