workspace = { members = ["rust_client_server"] }
[package]
name = "babychat"
version = "0.1.0"
edition = "2021"
default-run="server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="server"
path="src/main.rs"

[[bin]]
name="client"
path="src/client.rs"
